# roxwana-product-manager

./: .gitignore  AGENTS.md  README.md  SAFE_VERSION.md  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
.github/workflows/: publish-v0.2.10.yml  publish-v0.2.11.yml  publish-v0.2.9.yml
docs/: AI_ASSISTANT.md  ANDROID_SCANNER_PLAN.md  ARCHITECTURE.md  CLAVES_ACTUALIZACION_MANUAL.md  GOOGLE_DRIVE_BACKUP.md  MCP_PLAN.md  PRODUCT_LOGIC.md  RELEASE_PROCESS.md  SERVER_TROUBLESHOOTING.md  SETUP.md  UPDATE_GUIDE.md  WINDOWS_APP_STARTUP.md
docs/updater/: latest.0.2.11.json  latest.0.2.12.json  latest.0.2.13.json  latest.0.2.14.json  latest.0.2.5.json  latest.0.2.6.json  latest.0.2.7.json  latest.0.2.8.json  latest.0.2.9.json  latest.example.json  latest.json
mcp-server/: README.md  package.json
mcp-server/src/: index.ts
mobile-planning/: README.md
release-assets/v0.2.10/: ROXWANA Product Manager_0.2.10_x64-setup.exe.sig
release-assets/v0.2.11/: ROXWANA Product Manager_0.2.11_x64-setup.exe.sig
release-assets/v0.2.9/: ROXWANA Product Manager_0.2.9_x64-setup.exe.sig
scripts/: check-environment.ps1  dev-server.mjs  run-local.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/windows/: nsis-hooks.nsh
src/app/: App.tsx
src/components/: ui.tsx
src/lib/: productLogic.test.ts  productLogic.ts
src/services/: backupService.ts  (+3 more)
whisper-service/: server.mjs  transcribe.py
(+5 files in other folders)
