[package]
name = "roxwana-product-manager"
version = "0.1.0"
description = "ROXWANA Product Manager"
authors = ["ROXWANA"]
edition = "2021"

[lib]
name = "roxwana_product_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

